--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>neo4j-releases</id>
+            <url>http://m2.neo4j.org/content/repositories/releases</url>
+        </repository>
+    </repositories>
+
     <modules>
         <module>xo-neo4j-lucene</module>
         <module>xo-neo4j-gremlin</module>
