Neo4j/Gremlin now utilizes Tinkerpop/Gremlin

--- a/xo-neo4j-gremlin/pom.xml
+++ b/xo-neo4j-gremlin/pom.xml
@@ -17,6 +17,12 @@
             <version>0.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.smb-tec.xo</groupId>
+            <artifactId>xo-tinkerpop-blueprints</artifactId>
+            <version>0.0.3-SNAPSHOT</version>
+            <classifier>tests</classifier>
+        </dependency>
+        <dependency>
             <groupId>com.tinkerpop.blueprints</groupId>
             <artifactId>blueprints-neo4j2-graph</artifactId>
             <version>2.6.0</version>
