--- a/pom.xml
+++ b/pom.xml
@@ -136,11 +136,17 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-                <groupId>org.neo4j</groupId>
-                <artifactId>neo4j-rest-graphdb</artifactId>
-                <version>${org.neo4j.neo4j-rest-graphdb_version}</version>
-                <scope>test</scope>
-            </dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-rest-graphdb</artifactId>
+            <version>${org.neo4j.neo4j-rest-graphdb_version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
